# galaxy_morphology_cnn

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_baseline_cnn.ipynb  03_transfer_learning.ipynb
src/galaxy_cnn/: __init__.py  data.py  download_data.py  evaluate.py  model.py  serve.py  train.py
tests/: test_api.py  test_data.py  test_model.py
